# car_api

./: .env.test  README.md  cars.db  mkdocs.yml  pyproject.toml  tree_project.txt
car_api/: app.py
car_api/core/: database.py  security.py  settings.py
car_api/models/: __init__.py  base.py  cars.py  users.py
car_api/routers/: auth.py  brands.py  cars.py  users.py
car_api/routers/admin/: brands.py  cars.py  users.py
car_api/schemas/: auth.py  brands.py  cars.py  users.py
car_api/seeds/: admin.py
car_api/validators/: cars.py  users.py
docs/: api-endpoints.md  authentication.md  configuration.md  contributing.md  deployment.md  development.md  guidelines.md  index.md  installation.md  overview.md  prerequisites.md  release-notes.md  structure.md  system-modeling.md  testing.md
migrations/: env.py
migrations/versions/: 3864160875df_init_database.py  5703f5486d12_init_database.py
tests/: conftest.py  test_admin_users.py  test_auth.py  test_brands.py  test_cars.py  test_db.py  test_users.py
