[project]
name = "car-api"
version = "0.1.0"
description = "API RESTful para gerenciamento de veículos, marcas e usuários"
authors = [
    {name = "andreluoliveira82", email = "andreluoliveira@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"

dependencies = [
    # Web framework
    "fastapi[standard] (>=0.129.0,<0.130.0)",

    # Data validation
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.13.0,<3.0.0)",

    # Database
    "sqlalchemy[asyncio] (>=2.0.46,<3.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "alembic (>=1.18.4,<2.0.0)",

    # Authentication & Security
    "pwdlib[argon2] (>=0.3.0,<0.4.0)",
    "pyjwt (>=2.11.0,<3.0.0)",

    # Documentation
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocs-material (>=9.7.2,<10.0.0)",
    "pymdown-extensions (>=10.21,<11.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    # Code quality
    "ruff (>=0.15.2,<0.16.0)",

    # Task runner
    "taskipy (>=1.14.1,<2.0.0)",
    
    # Testing
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
]

[tool.ruff]
line-length = 92

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']
ignore = [
    'E501',        # Comentários e docstrings longos
    'PLR2004',     # Números mágicos
    'PLR0917',     # Muitos argumentos
    'PLR0913',     # Muitos parâmetros
    'PLR0912',     # Muitas branches (endpoints complexos)
    "PLR6301",     # Permitir métodos de teste em classes sem atributos
]

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'
asyncio_default_fixture_loop_scope = 'function'

[tool.coverage.run]
concurrency = ["thread", "greenlet"]

[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
run = 'fastapi dev car_api/app.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=car_api -vv'
post_test = 'coverage html'
docs = 'mkdocs serve -a 127.0.0.1:8001'